# HELiKs

./: .dockerignore  .gitignore  .gitmodules  README.md  build_sci.sh  cv-docker-compose.yml  cv_tests_cf2.sh  cv_tests_seal.sh  mm_tests_00.sh  mm_tests_cf.sh  mm_tests_ofhe.sh  mm_tests_seal.sh  mm_tests_tile.sh  mm_tests_v1.sh  mm_tests_v2.sh  mm_tests_v3.sh  ofhe-docker-compose.yml  ofhe_Dockerfile  ofhe_cv_docker-compose.yml  ofhe_cv_tests.sh  ofhe_cv_tests_cf2.sh  ofhe_mm_docker-compose.yml  ofhe_mm_tests.sh  seal_Dockerfile  seal_Dockerfile.dockerignore  seal_cv_docker-compose.yml  seal_cv_tests.sh  seal_cv_tests_cf2.sh  seal_mm_docker-compose.yml  seal_mm_tests.sh  seal_mm_tests_00.sh  setup_env_and_build.sh
SCI/cmake/: SCIConfig.cmake
SCI/src/LinearHE/: CMakeLists.txt  conv-field.cpp  conv-field.h  defines-HE.h  elemwise-prod-field.cpp  elemwise-prod-field.h  fc-field.cpp  fc-field.h  utils-HE.cpp  utils-HE.h  utils-vec.cpp  utils-vec.h
SCI/src/OT/: split-iknp.h
SCI/src/utils/: net_io_channel.h  utils.hpp
SCI/tests/: test_field_conv.cpp  test_field_fc.cpp  test_field_relu.cpp  test_ring_relu.cpp
heliks_ofhe/: CMakeLists.txt  cv_tests.sh  mm_tests.sh
heliks_ofhe/include/: conv-field.cpp  conv-field.h  fc-field.cpp  fc-field.h  utils.cpp  utils.h
heliks_ofhe/src/: test_heliks.cpp
